crates/djinn-agent/src/snapshots/djinn_agent__extension__tests__reviewer_tool_names.snap
---
source: crates/djinn-agent/src/extension.rs
assertion_line: 2888
expression: names
---
[
  "task_show",
  "task_list",
  "task_activity_list",
  "memory_read",
  "memory_search",
  "memory_list",
  "shell",
  "read",
  "lsp",
  "output_view",
  "output_grep",
  "submit_review"
]
